# SDL2-Codebase

./: CMakeLists.txt  readme.org
include/: sdl2_envelop.h  sdl2_eventhandler.h
src/: sdl2_crazy.cpp  sdl2_eventhandler.cpp  sdl2_synthesizer.cpp  sdl2_test_eventhandler.cpp  sdl2_window.cpp
